Bug 335948 - I cannot find the login chime in the system settings
Summary: I cannot find the login chime in the system settings
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: general (other bugs)
Version First Reported In: master
Platform: Kubuntu Linux
: NOR normal
Target Milestone: 1.0
Assignee: Sebastian Kügler
URL:
Keywords:
: 342182 346701 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-06-08 10:10 UTC by Marco Parillo
Modified: 2015-09-23 14:52 UTC (History)
8 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.4.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Marco Parillo 2014-06-08 10:10:19 UTC
With System Settings
Version 4.97.0
Using KDE Frameworks 4.100.0, under Event Notifications and Actions, I cannot see the event for logging into the Plasma Next Workspace, which I used to associate with the login chime.

Reproducible: Always
Comment 1 Christoph Feck 2014-06-08 10:56:15 UTC
Event Source: KDE Workspace should have "Login" event.

In the future, please do not report bugs for support questions. We have user forums for help and support.
Comment 2 Christoph Feck 2014-06-08 11:02:56 UTC
Probably not yet ported. I am not sure who is the maintainer for this, so I reassign this to "general".
Comment 3 Sebastian Kügler 2014-06-10 11:19:53 UTC
The login sound as a feature has been dropped. We felt it didn't add anything, and was just a remainder of trying to re-create the desktop systems of the 1990s.

Do you have a specific use-case which requires the login sound?

(I'll close this bugreport as WONTFIX, as it's a design decision, not a bug. Please don't feel discouraged by that to report bugs in the future.)
Comment 4 Martin Klapetek 2014-06-12 19:06:49 UTC
Note that the design decision is only for the default login sound (while this report is about the missing configuration for it).

We will still allow for setting custom sounds, patch already in review at https://git.reviewboard.kde.org/r/118636/
Comment 5 Martin Klapetek 2014-06-13 15:40:20 UTC
Git commit c2f45884310daba8672233e247fdaf4f9acd5b48 by Martin Klapetek.
Committed on 13/06/2014 at 15:39.
Pushed by mklapetek into branch 'master'.

[ksmserver]Reinstate login & logout sounds

This returns the feature of having and configuring login/logout sounds
for workspace; default remains off for both.

M  +1    -0    ksmserver/CMakeLists.txt
A  +2912 -0    ksmserver/plasma_workspace.notifyrc
M  +2    -0    ksmserver/server.h
M  +28   -3    ksmserver/shutdown.cpp
M  +4    -3    ksmserver/startup.cpp

http://commits.kde.org/plasma-workspace/c2f45884310daba8672233e247fdaf4f9acd5b48
Comment 6 Martin Klapetek 2014-06-19 12:39:36 UTC
Git commit 019f3bf5262bb1a168c2e874b1ca45d1dea9a6f2 by Martin Klapetek.
Committed on 19/06/2014 at 12:39.
Pushed by mklapetek into branch 'master'.

Revert "[ksmserver]Reinstate login & logout sounds"

This reverts commit c2f45884310daba8672233e247fdaf4f9acd5b48.

Apparently this can cause the login sequence to wait for PulseAudio and
can delay the startup quite considerably, so temporarily reverting.

REVIEW: 118636

Conflicts:
	ksmserver/plasma_workspace.notifyrc

M  +0    -1    ksmserver/CMakeLists.txt
M  +0    -2    ksmserver/server.h
M  +3    -28   ksmserver/shutdown.cpp
M  +3    -4    ksmserver/startup.cpp

http://commits.kde.org/plasma-workspace/019f3bf5262bb1a168c2e874b1ca45d1dea9a6f2
Comment 7 Bhushan Shah 2014-12-25 15:02:14 UTC
*** Bug 342182 has been marked as a duplicate of this bug. ***
Comment 8 David Edmundson 2014-12-26 18:28:51 UTC
Martin, what's the status of this?

I've yet to hear a good reason why it's a sensible feature, and given no-one has implemented it properly, I don't see much value in having it in this TODO list.
Comment 9 Martin Klapetek 2014-12-26 18:41:45 UTC
I'm not sure what's the best way of implementing this. Using KNotification during startup can be qutie heavy now but on the other hand it allows for configuring in the same place as you configure every other sound. Alternatively, KSMServer could play the sound directly by reading the .notifyrc config file, using something like aaplay.

As for the feature itself, I have no strong opinions either way. I guess it's nice to have?
Comment 10 Freek de Kruijf 2015-01-10 14:26:27 UTC
I can live with a design decision _not_ to have a log in and out sound anymore, but in that case it should not be present in Notification settings anymore, which is the case now. However I think it is nice to have.
Comment 11 David Edmundson 2015-04-26 10:38:22 UTC
*** Bug 346701 has been marked as a duplicate of this bug. ***
Comment 12 Martin Klapetek 2015-05-14 18:03:08 UTC
Git commit b0fe26bfb314698693fcf011e59a28769bd9a437 by Martin Klapetek.
Committed on 14/05/2015 at 18:03.
Pushed by mklapetek into branch 'master'.

[ksmserver] Bring back the login sound

Now it's played in its own thread, so should not block anything.

REVIEW: 123770

M  +24   -3    ksmserver/startup.cpp

http://commits.kde.org/plasma-workspace/b0fe26bfb314698693fcf011e59a28769bd9a437
Comment 13 Lukáš Tinkl 2015-05-18 16:37:23 UTC
Git commit 124ae2712c5869273d95c0460e895ff995195696 by Lukáš Tinkl, on behalf of Martin Klapetek.
Committed on 15/05/2015 at 00:54.
Pushed by lukas into branch 'ltinkl/solid-power'.

[ksmserver] Bring back the login sound

Now it's played in its own thread, so should not block anything.

REVIEW: 123770

M  +24   -3    ksmserver/startup.cpp

http://commits.kde.org/plasma-workspace/124ae2712c5869273d95c0460e895ff995195696
Comment 14 Martin Klapetek 2015-09-23 14:52:58 UTC
*** Bug 352976 has been marked as a duplicate of this bug. ***