[ksmserver]Reinstate login & logout sounds

This returns the feature of having and configuring login/logout sounds
for workspace; default remains off for both.

BUG: 335948